--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ services:
 
 before_install:
   - echo "Start creating an image with dockerfile on Travis!"
-  - docker build -t basicpail93/docker-react-app -f Dockerfile.dev .
+  - docker build -t basicpail93/docker-ping-app -f Dockerfile .
 
 script:
-  - docker run -e CI=true basicpail93/docker-react-app -- --coverage
+  - docker run -e CI=true basicpail93/docker-ping-app -- --coverage
 
 after_success:
   - echo "build success!"
