Edit travis.yml, Add check_docker.sh

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,8 @@ before_install:
   - docker build -t basicpail93/docker-ping-app -f Dockerfile .
 
 script:
-  script:
   - echo "Running Docker container and checking status..."
-  - docker run -e CI=true basicpail93/docker-ping-app sh -c "while true; do echo 'Docker is running...'; sleep 1; done"
+  - docker run -e CI=true basicpail93/docker-ping-app
 
 after_success:
-  - echo "build success!"
+  - echo "Build success!"
