--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - docker build -t basicpail93/docker-ping-app -f Dockerfile .
 
 script:
-  - echo "Running Docker container and checking status..."
+  - echo "Running Docker container!"
   - docker run -e CI=true basicpail93/docker-ping-app
 
 after_success:
